2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/net.m4: Define LOW_TCPPORTRANGE_MIN,
	  LOW_TCPPORTRANGE_MAX, TCPPORTRANGE_MIN, TCPPORTRANGE_MAX,
	  UDPPORTRANGE_MIN and UDPPORTRANGE_MAX
	* common-src/security-file.c: Use configured portrange is not set in
	  the security-file

2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Makefile.am, rest-server/Makefile.am, server-src/Makefile.am:
	  fix 'make dist' when compiled with --wothout-server or
	  --without-client

2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/amstar.pl: Check first line of errors

2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Service/Restore.pm: Remove unused code

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/diskflat-device.c (diskflat_clear_and_prepare_label):
	  result of ftruncate

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: Typo
	* application-src/amstar.c (amstar_restore, amstar_validate): filter
	  stdout and stderr

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/diskflat-device.c (diskflat_clear_and_prepare_label):
	  ftruncate the file

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/CheckDump.pm (run): Set all_copy=1 to restore()
	* perl/Amanda/Restore.pm (restore): Pass all_copy to make_plan()

2017-03-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Clerk.pm: Typo
	* perl/make_html.pl: Fix man pages

2017-03-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.3

2017-02-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Tapelist.swg (remove_tapelabel): Call C_remove_tapelabel
	* server-src/tapefile.c (add_tapelabel): Verify the label is not
	  already in the tapelist
	* installcheck/Amanda_Tapelist.pl: Fix/add check

2017-02-27  Jean-Louis Martineau <JMartineau@carbonite.com>